--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,16 +1,10 @@
 {
     "python.autoComplete.extraPaths": [
-        "/home/saga/catkin_ws/devel/lib/python2.7/dist-packages",
-        "/opt/ros/melodic/lib/python2.7/dist-packages"
-    ],
-    "python.analysis.extraPaths": [
-        "/home/saga/catkin_ws/devel/lib/python2.7/dist-packages",
+        "/home/dyros/catkin_ws/devel/lib/python2.7/dist-packages",
         "/opt/ros/melodic/lib/python2.7/dist-packages"
     ],
     "files.associations": {
-        "thread": "cpp",
         "chrono": "cpp",
-        "atomic": "cpp",
         "cctype": "cpp",
         "clocale": "cpp",
         "cmath": "cpp",
@@ -24,6 +18,7 @@
         "cwchar": "cpp",
         "cwctype": "cpp",
         "array": "cpp",
+        "atomic": "cpp",
         "strstream": "cpp",
         "*.tcc": "cpp",
         "bitset": "cpp",
@@ -35,10 +30,25 @@
         "unordered_set": "cpp",
         "vector": "cpp",
         "exception": "cpp",
+        "algorithm": "cpp",
+        "functional": "cpp",
+        "iterator": "cpp",
+        "map": "cpp",
+        "memory": "cpp",
+        "memory_resource": "cpp",
+        "numeric": "cpp",
+        "optional": "cpp",
+        "ratio": "cpp",
+        "set": "cpp",
+        "string": "cpp",
+        "string_view": "cpp",
+        "system_error": "cpp",
+        "tuple": "cpp",
+        "type_traits": "cpp",
+        "utility": "cpp",
         "hash_map": "cpp",
         "hash_set": "cpp",
         "fstream": "cpp",
-        "functional": "cpp",
         "initializer_list": "cpp",
         "iomanip": "cpp",
         "iosfwd": "cpp",
@@ -47,28 +57,13 @@
         "limits": "cpp",
         "new": "cpp",
         "ostream": "cpp",
-        "numeric": "cpp",
-        "ratio": "cpp",
         "sstream": "cpp",
         "stdexcept": "cpp",
         "streambuf": "cpp",
-        "system_error": "cpp",
+        "thread": "cpp",
         "cfenv": "cpp",
         "cinttypes": "cpp",
-        "tuple": "cpp",
-        "type_traits": "cpp",
-        "utility": "cpp",
         "typeindex": "cpp",
-        "typeinfo": "cpp",
-        "algorithm": "cpp",
-        "iterator": "cpp",
-        "map": "cpp",
-        "memory": "cpp",
-        "memory_resource": "cpp",
-        "optional": "cpp",
-        "random": "cpp",
-        "set": "cpp",
-        "string": "cpp",
-        "string_view": "cpp"
+        "typeinfo": "cpp"
     }
 }
