--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,74 +2,38 @@ cmake_minimum_required(VERSION 3.0.2)
 project(tocabi_ecat)
 
 ## Compile as C++11, supported in ROS Kinetic and newer
-add_compile_options(-std=c++11)
+add_compile_options()
 
-set(CMAKE_BUILD_TYPE RELWITHDEBINFO)
+# ADD_DEFINITIONS(-DTIME_CHECK)
+# ADD_DEFINITIONS(-DECAT_DC)
+
+execute_process(COMMAND uname -r OUTPUT_VARIABLE UNAME_RES OUTPUT_STRIP_TRAILING_WHITESPACE)
+message("-- kernel version : " ${UNAME_RES})
+execute_process(COMMAND xeno-config --posix --cflags OUTPUT_VARIABLE XENO_CFLAGS OUTPUT_STRIP_TRAILING_WHITESPACE)
+
+execute_process(COMMAND xeno-config --posix --ldflags OUTPUT_VARIABLE XENO_LDFLAGS OUTPUT_STRIP_TRAILING_WHITESPACE)
+message(" xeno flags : " ${XENO_CFLAGS})
+string(FIND ${UNAME_RES} "Sxenomai" wsloc)
+
+# set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${XENO_CFLAGS} ${XENO_LDFLAGS}")
+# set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} ${XENO_CFLAGS} ${XENO_LDFLAGS}")
+
+# set(CMAKE_BUILD_TYPE DEBUG)
 
 ## Find catkin macros and libraries
 ## if COMPONENTS list like find_package(catkin REQUIRED COMPONENTS xyz)
 ## is used, also find other catkin packages
-find_package(catkin REQUIRED)
+find_package(catkin REQUIRED COMPONENTS roscpp)
+find_package(tocabi_lib COMPONENTS)
 
 ## System dependencies are found with CMake's conventions
 # find_package(Boost REQUIRED COMPONENTS system)
-
+#find_package(roscpp REQUIRED COMPONENTS)
 
 ## Uncomment this if the package has a setup.py. This macro ensures
 ## modules and global scripts declared therein get installed
 ## See http://ros.org/doc/api/catkin/html/user_guide/setup_dot_py.html
 # catkin_python_setup()
-
-################################################
-## Declare ROS messages, services and actions ##
-################################################
-
-## To declare and build messages, services or actions from within this
-## package, follow these steps:
-## * Let MSG_DEP_SET be the set of packages whose message types you use in
-##   your messages/services/actions (e.g. std_msgs, actionlib_msgs, ...).
-## * In the file package.xml:
-##   * add a build_depend tag for "message_generation"
-##   * add a build_depend and a exec_depend tag for each package in MSG_DEP_SET
-##   * If MSG_DEP_SET isn't empty the following dependency has been pulled in
-##     but can be declared for certainty nonetheless:
-##     * add a exec_depend tag for "message_runtime"
-## * In this file (CMakeLists.txt):
-##   * add "message_generation" and every package in MSG_DEP_SET to
-##     find_package(catkin REQUIRED COMPONENTS ...)
-##   * add "message_runtime" and every package in MSG_DEP_SET to
-##     catkin_package(CATKIN_DEPENDS ...)
-##   * uncomment the add_*_files sections below as needed
-##     and list every .msg/.srv/.action file to be processed
-##   * uncomment the generate_messages entry below
-##   * add every package in MSG_DEP_SET to generate_messages(DEPENDENCIES ...)
-
-## Generate messages in the 'msg' folder
-# add_message_files(
-#   FILES
-#   Message1.msg
-#   Message2.msg
-# )
-
-## Generate services in the 'srv' folder
-# add_service_files(
-#   FILES
-#   Service1.srv
-#   Service2.srv
-# )
-
-## Generate actions in the 'action' folder
-# add_action_files(
-#   FILES
-#   Action1.action
-#   Action2.action
-# )
-
-## Generate added messages and services with any dependencies listed here
-# generate_messages(
-#   DEPENDENCIES
-#   std_msgs  # Or other packages containing msgs
-# )
 
 ################################################
 ## Declare ROS dynamic reconfigure parameters ##
@@ -101,7 +65,7 @@ find_package(catkin REQUIRED)
 ## CATKIN_DEPENDS: catkin_packages dependent projects also need
 ## DEPENDS: system dependencies of this project that dependent projects also need
 catkin_package(
-#  INCLUDE_DIRS include
+   INCLUDE_DIRS include
 #  LIBRARIES tocabi_ecat
 #  CATKIN_DEPENDS other_catkin_pkg
 #  DEPENDS system_lib
@@ -114,15 +78,28 @@ catkin_package(
 ## Specify additional locations of header files
 ## Your package locations should be listed before other locations
 include_directories(
-include
-/usr/local/include/soem
-# ${catkin_INCLUDE_DIRS}
+  include
+  /usr/local/include/soem
+  ${tocabi_lib_INCLUDE_DIRS}
+  /usr/xenomai/include
+  /usr/xenomai/include/cobalt
+)
+
+link_directories(
+  /usr/xenomai/lib
 )
 
 ## Declare a C++ library
-add_library(tocabi_ecat_lib
-  src/tocabi_ecat.cpp
-)
+# add_library(tocabi_ecat_lib
+#   src/tocabi_ecat.cpp
+#   ${catkin_LIBRARIES}
+# )
+
+
+# add_library(tocabi_ecat_rtnet_lib STATIC
+#   src/tocabi_ecat_rtnet.cpp
+#   ${catkin_LIBRARIES}
+# )
 
 ## Add cmake target dependencies of the library
 ## as an example, code may need to be generated before libraries
@@ -132,8 +109,17 @@ add_library(tocabi_ecat_lib
 ## Declare a C++ executable
 ## With catkin_make all packages are built within a single CMake context
 ## The recommended prefix ensures that target names across packages don't collide
-add_executable(tocabi_ecat src/main.cpp)
+# add_executable(tocabi_ecat src/main.cpp)
+add_executable(tocabi_ecat src/master_alone.cpp src/ecat_master.cpp  src/ecat_settings.cpp)
+add_executable(tocabi_ecat_lower src/master_lower.cpp src/ecat_master.cpp src/ecat_settings.cpp)
+add_executable(tocabi_ecat_upper src/master_upper.cpp src/ecat_master.cpp src/ecat_settings.cpp)
+
 add_executable(watcher src/watcher.cpp)
+
+# add_executable(watcher2 src/watcher_status.cpp)
+
+
+
 ## Rename C++ executable without prefix
 ## The above recommended prefix causes long target names, the following renames the
 ## target back to the shorter version for ease of user use
@@ -145,12 +131,32 @@ add_executable(watcher src/watcher.cpp)
 # add_dependencies(${PROJECT_NAME}_node ${${PROJECT_NAME}_EXPORTED_TARGETS} ${catkin_EXPORTED_TARGETS})
 
 ## Specify libraries to link a library or executable target against
+# target_link_libraries(tocabi_ecat
+#   tocabi_ecat_lib
+#   ${catkin_LIBRARIES}
+#   -lsoem
+#   -pthread
+# )
 target_link_libraries(tocabi_ecat
-  tocabi_ecat_lib
-  ${catkin_LIBRARIES}
-  -lsoem
-  -pthread
+#tocabi_ecat_rtnet_lib
+-lsoem
+-lpthread
+ ${XENO_CFLAGS}
+ ${XENO_LDFLAGS}
 )
+target_link_libraries(tocabi_ecat_lower
+  -lsoem
+  -lpthread
+  # ${XENO_CFLAGS}
+  # ${XENO_LDFLAGS}
+)
+target_link_libraries(tocabi_ecat_upper
+  -lsoem 
+  -lpthread
+  # ${XENO_CFLAGS}
+  # ${XENO_LDFLAGS}
+)
+
 
 #############
 ## Install ##
@@ -181,11 +187,11 @@ target_link_libraries(tocabi_ecat
 # )
 
 ## Mark cpp header files for installation
-# install(DIRECTORY include/${PROJECT_NAME}/
-#   DESTINATION ${CATKIN_PACKAGE_INCLUDE_DESTINATION}
-#   FILES_MATCHING PATTERN "*.h"
-#   PATTERN ".svn" EXCLUDE
-# )
+install(DIRECTORY include/${PROJECT_NAME}/
+  DESTINATION ${CATKIN_PACKAGE_INCLUDE_DESTINATION}
+  FILES_MATCHING PATTERN "*.h"
+  PATTERN ".svn" EXCLUDE
+)
 
 ## Mark other files for installation (e.g. launch and bag files, etc.)
 # install(FILES
@@ -206,3 +212,6 @@ target_link_libraries(tocabi_ecat
 
 ## Add folders to be run by python nosetests
 # catkin_add_nosetests(test)
+
+
+# add_dependencies(${PROJECT_NAME} ${catkin_EXPORTED_TARGE
