--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -15,99 +15,38 @@ execute_process(COMMAND xeno-config --posix --ldflags OUTPUT_VARIABLE XENO_LDFLA
 message(" xeno flags : " ${XENO_CFLAGS})
 string(FIND ${UNAME_RES} "Sxenomai" wsloc)
 
-#set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${XENO_CFLAGS}")
-# set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} ${XENO_CFLAGS}")
+if(${wsloc} EQUAL -1 )
+  message(" simulation only compile mode ")
+  ADD_DEFINITIONS(-DCOMPILE_SIMULATION)
+  set(COMPILE_SIM TRUE)
+else()
+  message(" xenomai detected realrobot compilt mode ")
+  ADD_DEFINITIONS(-DCOMPILE_REALROBOT)
+  set(COMPILE_REAL TRUE)
+endif() 
 
-# set(CMAKE_BUILD_TYPE DEBUG)
-# set(CMAKE_EXE_LINKER_FLAGS "${CMAKE_SHARED_LINKER_FLAGS} ${XENO_LDFLAGS}")
-## Find catkin macros and libraries
-## if COMPONENTS list like find_package(catkin REQUIRED COMPONENTS xyz)
-## is used, also find other catkin packages
+
 find_package(catkin REQUIRED COMPONENTS roscpp)
 find_package(tocabi_lib COMPONENTS)
 
-## System dependencies are found with CMake's conventions
-# find_package(Boost REQUIRED COMPONENTS system)
-#find_package(roscpp REQUIRED COMPONENTS)
 
-## Uncomment this if the package has a setup.py. This macro ensures
-## modules and global scripts declared therein get installed
-## See http://ros.org/doc/api/catkin/html/user_guide/setup_dot_py.html
-# catkin_python_setup()
-
-################################################
-## Declare ROS dynamic reconfigure parameters ##
-################################################
-
-## To declare and build dynamic reconfigure parameters within this
-## package, follow these steps:
-## * In the file package.xml:
-##   * add a build_depend and a exec_depend tag for "dynamic_reconfigure"
-## * In this file (CMakeLists.txt):
-##   * add "dynamic_reconfigure" to
-##     find_package(catkin REQUIRED COMPONENTS ...)
-##   * uncomment the "generate_dynamic_reconfigure_options" section below
-##     and list every .cfg file to be processed
-
-## Generate dynamic reconfigure parameters in the 'cfg' folder
-# generate_dynamic_reconfigure_options(
-#   cfg/DynReconf1.cfg
-#   cfg/DynReconf2.cfg
-# )
-
-###################################
-## catkin specific configuration ##
-###################################
-## The catkin_package macro generates cmake config files for your package
-## Declare things to be passed to dependent projects
-## INCLUDE_DIRS: uncomment this if your package contains header files
-## LIBRARIES: libraries you create in this project that dependent projects also need
-## CATKIN_DEPENDS: catkin_packages dependent projects also need
-## DEPENDS: system dependencies of this project that dependent projects also need
 catkin_package(
    INCLUDE_DIRS include
-#  LIBRARIES tocabi_ecat
-#  CATKIN_DEPENDS other_catkin_pkg
-#  DEPENDS system_lib
 )
 
-###########
-## Build ##
-###########
-
-## Specify additional locations of header files
-## Your package locations should be listed before other locations
 include_directories(
   include
   ${tocabi_lib_INCLUDE_DIRS}
   /usr/local/include/soem
-
 )
+
+if(${COMPILE_REAL})
+
+
 
 link_directories(
 )
 
-## Declare a C++ library
-# add_library(tocabi_ecat_lib
-#   src/tocabi_ecat.cpp
-#   ${catkin_LIBRARIES}
-# )
-
-
-# add_library(tocabi_ecat_rtnet_lib STATIC
-#   src/tocabi_ecat_rtnet.cpp
-#   ${catkin_LIBRARIES}
-# )
-
-## Add cmake target dependencies of the library
-## as an example, code may need to be generated before libraries
-## either from message generation or dynamic reconfigure
-# add_dependencies(${PROJECT_NAME} ${${PROJECT_NAME}_EXPORTED_TARGETS} ${catkin_EXPORTED_TARGETS})
-
-## Declare a C++ executable
-## With catkin_make all packages are built within a single CMake context
-## The recommended prefix ensures that target names across packages don't collide
-# add_executable(tocabi_ecat src/main.cpp)
 add_executable(tocabi_ecat src/master_alone.cpp src/ecat_master.cpp  src/ecat_settings.cpp)
 add_executable(tocabi_ecat_lower 
 src/master_lower.cpp src/ecat_master.cpp src/ecat_settings.cpp)
@@ -120,29 +59,6 @@ add_executable(watcher src/watcher.cpp)
 
 # add_executable(watcher2 src/watcher_status.cpp)
 
-
-
-## Rename C++ executable without prefix
-## The above recommended prefix causes long target names, the following renames the
-## target back to the shorter version for ease of user use
-## e.g. "rosrun someones_pkg node" instead of "rosrun someones_pkg someones_pkg_node"
-# set_target_properties(${PROJECT_NAME}_node PROPERTIES OUTPUT_NAME node PREFIX "")
-
-## Add cmake target dependencies of the executable
-## same as for the library above
-# add_dependencies(${PROJECT_NAME}_node ${${PROJECT_NAME}_EXPORTED_TARGETS} ${catkin_EXPORTED_TARGETS})
-
-## Specify libraries to link a library or executable target against
-# target_link_libraries(tocabi_ecat
-#   tocabi_ecat_lib
-#   ${catkin_LIBRARIES}
-#   -lsoem
-#   -pthread
-# )
-
-# target_link_libraries(red_test
-# soem
-# )
 
 target_link_libraries(tocabi_ecat
 -lsoem
@@ -165,60 +81,16 @@ target_link_libraries(tocabi_ecat_upper
 )
 
 
-#############
-## Install ##
-#############
 
-# all install targets should use catkin DESTINATION variables
-# See http://ros.org/doc/api/catkin/html/adv_user_guide/variables.html
+endif()
 
-## Mark executable scripts (Python etc.) for installation
-## in contrast to setup.py, you can choose the destination
-# catkin_install_python(PROGRAMS
-#   scripts/my_python_script
-#   DESTINATION ${CATKIN_PACKAGE_BIN_DESTINATION}
-# )
+if(${COMPILE_SIM})
 
-## Mark executables for installation
-## See http://docs.ros.org/melodic/api/catkin/html/howto/format1/building_executables.html
-# install(TARGETS ${PROJECT_NAME}_node
-#   RUNTIME DESTINATION ${CATKIN_PACKAGE_BIN_DESTINATION}
-# )
+add_executable(watcher src/watcher.cpp)
+endif()
 
-## Mark libraries for installation
-## See http://docs.ros.org/melodic/api/catkin/html/howto/format1/building_libraries.html
-# install(TARGETS ${PROJECT_NAME}
-#   ARCHIVE DESTINATION ${CATKIN_PACKAGE_LIB_DESTINATION}
-#   LIBRARY DESTINATION ${CATKIN_PACKAGE_LIB_DESTINATION}
-#   RUNTIME DESTINATION ${CATKIN_GLOBAL_BIN_DESTINATION}
-# )
-
-## Mark cpp header files for installation
 install(DIRECTORY include/${PROJECT_NAME}/
   DESTINATION ${CATKIN_PACKAGE_INCLUDE_DESTINATION}
   FILES_MATCHING PATTERN "*.h"
   PATTERN ".svn" EXCLUDE
 )
-
-## Mark other files for installation (e.g. launch and bag files, etc.)
-# install(FILES
-#   # myfile1
-#   # myfile2
-#   DESTINATION ${CATKIN_PACKAGE_SHARE_DESTINATION}
-# )
-
-#############
-## Testing ##
-#############
-
-## Add gtest based cpp test target and link libraries
-# catkin_add_gtest(${PROJECT_NAME}-test test/test_tocabi_ecat.cpp)
-# if(TARGET ${PROJECT_NAME}-test)
-#   target_link_libraries(${PROJECT_NAME}-test ${PROJECT_NAME})
-# endif()
-
-## Add folders to be run by python nosetests
-# catkin_add_nosetests(test)
-
-
-# add_dependencies(${PROJECT_NAME} ${catkin_EXPORTED_TARGE
